syntax = "proto3";
option java_package = "com.huawei.recordconsole.netty.pojo";

message NettyMessage{

  enum MessageType {
    HEARTBEAT_PING = 0;
    HEARTBEAT_PONG = 1;
    SERVICE_DATA = 2;
  }

  MessageType messageType = 1;
  HeartBeat heartBeat = 2;
  repeated ServiceData serviceData = 3;


}
message HeartBeat{

}
message ServiceData{
  enum DataType{
    RECORD = 0;
  }
  DataType dataType = 1;
  bytes data = 2;
}